Sun Mar  2 11:15:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/find.rb (Find#find): add "ignore_error" keyword argument
	  defaulted to true.  [ruby-core:51025] [Feature #7596]

Sun Mar  2 11:13:30 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/extconf.rb (rl_hook_func_t): define as Function for
	  very old readline versions.  [ruby-core:61209] [Bug #9578]

Sun Mar  2 10:47:58 2014  Eric Wong  <e@80x24.org>

	* load.c (ruby_init_ext): make idempotent to suppress warnings

Sat Mar  1 19:51:42 2014  Tanaka Akira  <akr@fsij.org>

	* lib/open3.rb (Open3.capture3): Ignore Errno::EPIPE for writing
	  stdin_data.
	  (Open3.capture2): Ditto.
	  (Open3.capture2e): Ditto.

Sat Mar  1 19:06:47 2014  Eric Wong  <e@80x24.org>

	* gc.c (ruby_gc_set_params): simplify condition

Sat Mar  1 16:18:40 2014  Tanaka Akira  <akr@fsij.org>

	* ext/readline/readline.c (Init_readline): Use rl_hook_func_t instead
	  of Function to support readline-6.3.  (rl_hook_func_t is available
	  since readline-4.2.)
	  Reported by Dmitry Medvinsky.  [ruby-core:61141] [Bug #9578]

Sat Mar  1 16:05:58 2014  Eric Wong  <e@80x24.org>

	* gc.c (ruby_gc_set_params): fix building without RGenGC

Sat Mar  1 11:08:00 2014  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: support dumping Encoding
	  objects.

	* ext/psych/lib/psych/visitors/to_ruby.rb: support loading Encoding
	  objects.

	* test/psych/test_encoding.rb: add test

	* ext/psych/lib/psych.rb: add version

Sat Mar  1 10:52:34 2014  Zachary Scott  <e@zzak.io>

	* README.EXT.ja: [DOC] Fix typo "macro macro" @utenmiki [Fixes GH-551]
	  https://github.com/ruby/ruby/pull/551

Fri Feb 28 11:16:55 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c: Fix Numeric#step with 0 unit [Bug #9575]

Thu Feb 27 17:59:01 2014  Zachary Scott  <e@zzak.io>

	* lib/optparse.rb: [DOC] Add example of generating help with optparse.
	  Patch by @joelmccracken documenting-ruby/ruby#19